--- a/main.html
+++ b/main.html
@@ -5,8 +5,23 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	
 
 <body>
+	<holder>
+		<div class="item-1">3</div>
+		
+		<div class="item-2">1</div>
+		<div class="item-3">2</div>
+		
+		
+		
+
+		
+		
+
+		
+	</holder>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
